[IV] QPT-176 added endpoint to get aggregated rooms | reservations (#18)
* [IV] QPT-176 added endpoint to get aggregated rooms | reservations

* [IV] QPT-176 room: removed type and added source name columns

---------

Co-authored-by: Indrit Vaka <indrit.vaka@gmail.com>
Co-authored-by: Indrit Vaka <indrit.vaka-extern@gmail.com>